--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   geocoding: ^2.1.0
 
   mime_type: ^1.0.1
+  intl_phone_field: ^3.2.0
   internet_connection_checker_plus: ^2.5.1
 
 
