--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
 
   mime_type: ^1.0.1
   intl_phone_field: ^3.2.0
-  internet_connection_checker_plus: ^2.5.1
+#  internet_connection_checker_plus: ^2.5.1
 
 
 
