--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.6.1
   geocoding: ^2.1.0
   flutter_widget_from_html:
+  socket_io_client: ^3.0.0
 
   mime_type: ^1.0.1
   intl_phone_field: ^3.2.0
