--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to pick images for your profile.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to take photos for your profile.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need access to your microphone to record audio in videos.</string>
 </dict>
 </plist>
