--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   mime_type: ^1.0.1
   intl_phone_field: ^3.2.0
   connectivity_plus: ^4.0.0
+
+
+#  search able map
+#  google_maps_webservice:
+#  flutter_google_places:
 #  internet_connection_checker_plus: ^2.5.1
 
 
